Fix alignment on text and contacts

--- a/src/Components/Pages/AboutPage.scss
+++ b/src/Components/Pages/AboutPage.scss
@@ -94,6 +94,7 @@
     flex-direction: column;
     height: calc(100vh - 90px);
     padding-bottom: 20px;
+    justify-content: flex-start;
   }
 
   .aboutpage-text {
@@ -101,6 +102,7 @@
     margin: 0 10px;
     padding: 10px;
     height: auto;
+    max-width: 100%;
   }
 
   .aboutpage-contact {
@@ -111,6 +113,7 @@
     width: auto;
     max-width: 100%;
     overflow: hidden;
+    height: 50px;
   }
 
   .aboutpage-contact p {
